--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,9 @@
     "contact":"Контакты",
     "about":"О компании AIC",
     "Kyrgyzstan":"Кыргызская Республика",
-    "service":"Услуги"
+    "service":"Услуги",
+    "service1":"Услуги 1",
+    "service2":"Услуги 2",
+    "service3":"Услуги 3",
+    "service4":"Услуги 4"
 }
