--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,5 +7,6 @@
     "service1":"Услуги 1",
     "service2":"Услуги 2",
     "service3":"Услуги 3",
-    "service4":"Услуги 4"
+    "service4":"Услуги 4",
+    "service1text":"Наша компания гордится предоставлением разнообразных услуг, которые охватывают все сферы вашей жизни. Мы стремимся обеспечить высокое качество обслуживания и индивидуальный подход к каждому клиенту. Независимо от того, нужна ли вам помощь в обучении, консультации по финансам, услуги по уходу за здоровьем или помощь в решении бытовых вопросов, мы всегда готовы прийти на помощь. Наши специалисты имеют богатый опыт и профессиональные навыки, чтобы удовлетворить ваши потребности. Мы стремимся к постоянному улучшению и развитию, чтобы предоставлять вам только лучшие услуги, отвечающие современным требованиям и ожиданиям клиентов. Ваше удовлетворение - наш главный приоритет."
 }
