--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,9 +3,13 @@
     "gmail":"MAIL: dzhailikeevtalgat@gmail.com",
     "contact":"Contacts",
     "about":"About AIC",
+    "vacancie":"Vacancies",
+    "no vacancie": "No Vacancies",
     "Kyrgyzstan":"Kyrgyz Republic",
     "service":"Services",
     "our":"OUR",
+    "onas":"About Us",
+    "onasText":"AIC is a leading innovative player in the world of technology, specializing in the development and implementation of advanced information technology solutions. With our rich portfolio of products and services, we create unique solutions for our clients, helping them realize their potential and achieve their business goals. Our team consists of highly qualified specialists ready to solve the most complex problems. We are committed to continuous development and innovation to stay at the forefront of technology trends and meet the needs of our customers in a rapidly changing business world.",
     "service1":"Service 1",
     "service2":"Service 2",
     "service3":"Service 3",
