--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,9 +3,13 @@
     "gmail":"ПОЧТА: dzhailikeevtalgat@gmail.com",
     "contact":"Контакты",
     "about":"О компании AIC",
+    "vacancie":"Вакансии",
+    "no vacancie": "Нет Вакансий",
     "Kyrgyzstan":"Кыргызская Республика",
     "service":"Услуги",
     "our":"НАШИ",
+    "onas":"О Нас",
+    "onasText":"Компания AIC – ведущий инновационный игрок в мире технологий, специализирующийся на разработке и внедрении передовых решений в области информационных технологий. С нашим богатым портфолио продуктов и услуг мы создаем уникальные решения для наших клиентов, помогая им реализовать свой потенциал и достичь бизнес-целей. Наша команда состоит из высококвалифицированных специалистов, готовых решать самые сложные задачи. Мы стремимся к постоянному развитию и инновациям, чтобы оставаться во главе технологических трендов и удовлетворять потребности наших клиентов в быстро меняющемся мире бизнеса.",
     "service1":"Услуги 1",
     "service2":"Услуги 2",
     "service3":"Услуги 3",
